# torchhydro

./: .gitignore  .python-version  404.html  DEVELOPERS.md  LICENSE  README.md  README.zh.md  env-dev-gnn.yml  env-dev.yml  env-ubuntu-dev.yml  env-windows-dev.yml  environment.yml  github-actions-guide.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytorch_train.py  requirements.txt  requirements_dev.txt  requirements_zaixiaxiaowu.txt  setup.cfg  setup.py  sitemap.xml  sklearn_train.py  test.py  version-management-guide.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build-uv.yml  build.yml  docs.yml  pypi-uv.yml  pypi.yml
api/configs/: index.html
api/datasets/: index.html
api/explainers/: index.html
api/models/: index.html
api/trainers/: index.html
changelog/: index.html
contributing/: index.html
data/: basin_5819.csv  basin_615.csv  basin_id(0+20).csv  basin_id(46+1).csv  basin_id(498+24).csv  basin_id(498+40).csv  basin_id(498+41).csv  basin_id(97+24).csv  basin_id(all).csv  gage_id.csv  gage_id_test.csv
docs/: changelog.md  contributing.md  fabric_debug_guide.md  faq.md  index.md  installation.md  torchhydro.md  unified_torchhydro_explanation.md  usage.md
docs/api/: configs.md  datasets.md  explainers.md  models.md  trainers.md
docs/examples/: lstm_camels_results.md
examples/: dpl_xaj_example.py  lstm_camels_example.py
examples/lstm_camels_results/: index.html
experiments/: camels531.csv  check_model_state.py  evaluate_with_camels_17attributes.py  evaluate_with_camels_sk.py  evaluate_with_camels_sk_aef.py  evaluate_with_era5land.py  evaluate_with_gpm.py  evaluate_with_gpm_streamflow.py  evaluate_with_mtslstm.py  evaluate_with_us_aef.py  fabric_launcher_config.py  generate_pt_and_test_loaded.py  pretrained_day_f1.pth  run_camelsaus_dplsac_experiments.py  run_camelsauslstm_experiments.py  run_camelsbr_dplsac_experiments.py  run_camelsbrlstm_experiments.py  run_camelsch_dplsac_experiments.py  run_camelschdplsac_experiments.py  run_camelschlstm_experiments.py  run_camelscl_dplsac_experiments.py  run_camelscllstm_experiments.py  run_camelsde_dplsac_experiments.py  run_camelsdelstm_experiments.py  run_camelsdk_dplsac_experiments.py  run_camelsdkdplsac_experiments.py  run_camelsdklstm_experiments.py  run_camelsdplsac_experiments.py  run_camelsdplxaj_experiments.py  run_camelsfr_dplsac_experiments.py  run_camelsfrlstm_experiments.py  run_camelsgbdplsac_experiments.py  run_camelsgblstm_experiments.py  run_camelsind_dplsac_experiments.py  run_camelsindlstm_experiments.py  run_camelslstm_experiments.py  run_camelsse_dplsac_experiments.py  run_camelsselstm_experiments.py  run_camelsus_dplsac_experiments.py  run_camelsus_dpltank_experiments.py  (+20 more)
fabric_debug_guide/: index.html
faq/: index.html
installation/: index.html
search/: search_index.json
tests/: __init__.py  conftest.py  evaluate_with_era5land.py  evaluate_with_gpm.py  evaluate_with_gpm_streamflow.py  test_ann.py  test_arch.py  test_arch_data.py  test_basintree.py  test_camelsaus_dplsac.py  test_camelsaus_dpltank.py  test_camelsaus_lstm.py  test_camelsauslstm.py  test_camelsbr.py  test_camelsbr_dplsac.py  test_camelsbr_dpltank.py  test_camelsbr_lstm.py  test_camelsbrlstm.py  test_camelsch_dpltank.py  test_camelsch_lstm.py  test_camelschlstm.py  test_camelscl_dplsac.py  test_camelscl_dpltank.py  test_camelscl_lstm.py  test_camelscllstm.py  test_camelsde_dplsac.py  test_camelsde_dpltank.py  test_camelsde_lstm.py  test_camelsdelstm.py  test_camelsdk_dplsac.py  test_camelsdk_dpltank.py  test_camelsdk_lstm.py  test_camelsdklsmt.py  test_camelsdklstm.py  test_camelsdpl4sac.py  test_camelsfr_dplsac.py  test_camelsfr_dpltank.py  test_camelsfr_lstm.py  test_camelsfr_narx.py  test_camelsfr_netsednarx.py  (+89 more)
torchhydro/: __init__.py  cli.py  index.html  torchhydro.py
torchhydro/configs/: config.py  model_config.py
torchhydro/datasets/: arch.py  config.py  create_graph.py  data_constant.py  data_dict.py  data_scalers.py  data_sets.py  data_source.py  data_source_gpm_gfs.py  data_source_mean.py  data_sources.py  data_utils.py  interpolation.py  mi_stl.py  narcdataset.py  narxdataset.py  sampler.py  scalers.py  select_gages_ids.py  unified_data_loader.py
torchhydro/explainers/: shap.py  uncertainty_analysis.py  weight_anlysis.py
torchhydro/models/: __init__.py  ann.py  basintree.py  crits.py  cudnnlstm.py  dpl4gr4j.py  dpl4hbv.py  dpl4sac.py  dpl4tank.py  dpl4xaj.py  dpl4xaj_nn4et.py  dplnarxsac.py  dropout.py  evaluator.py  fds.py  gilrlstm.py  gnn.py  kernel_conv.py  linear_recurrence.cu  minlstm.py  model_dict_function.py  model_factory.py  model_utils.py  mtslstm.py  narx.py  narxnn.py  pytorch_training.py  ranking.py  registry.py  seq2seq.py  seqforecast.py  simple_lstm.py  simple_narx.py  slstm.py  spplstm.py  target_relevance.py  time_model.py  torch_model.py  traditional_model.py  trainer.py  (+1 more)
torchhydro/trainers/: deep_hydro.py  evaluator.py  fabric_wrapper.py  pytorch_training.py  resulter.py  time_model.py  train_logger.py  train_utils.py  trainer.py  unified_trainer.py
usage/: index.html
